--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 beautifulsoup4==4.14.3
 certifi==2026.1.4
 charset-normalizer==3.4.4
+et_xmlfile==2.0.0
 idna==3.11
 lxml==6.0.2
 numpy==2.4.2
+openpyxl==3.1.5
 pandas==3.0.1
 python-dateutil==2.9.0.post0
 PyYAML==6.0.3
